2008-10-07  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* 5.1.6 release.

2008-03-18  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/_string.c: derived from patch #1914475, wrong
	replace for selfreferencing string; thanks Farid Zaripov;

	* test/unit/string_test.cpp: test for problem above.
	
2008-01-29  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* build/Makefiles/gmake/gcc.mak, build/test/unit/gcc.mak:
	build on HP-UX PA-RISC and IA64, build on Solaris;

	* build/test/eh/gcc.mak: ditto;

	* build/Makefiles/gmake/hp-ux/targetsys.mak: cool, but HP-UX IA64
	use shared lib extention so, not sl as on PA-RISC;

	* src/cxa.c: fix cxa_atexit problem for HP-UX with gcc, like on
	Solaris;

	* stlport/wctype.h, stlport/stl/_cwctype.h: problem with wchars
	on HP-UX;

	* src/num_get_float.cpp: no stdint.h on HP-UX; suggested by KBac.

2008-01-19  Francois Dumont  <dums@users.sourceforge.net>

	* 5.1.5 released based on revision 3387.

2008-01-15  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* stlport/stl/config/_hpux.h: define _POSIX_C_SOURCE 199506;

	* build/Makefiles/gmake/gcc.mak: remove obsolete and wrong workaround
	for Solaris and Darwin; suggested by KBac, patch #1869229.

2008-01-13  Francois Dumont  <dums@users.sourceforge.net>

	* src/fstream.cpp, stlport/stl/_fstream.c: Complete bug #1854345
	fix as already done in SVN trunk. Moreover, an other SVN trunk bug
	fix has been integrated. We now try to convert already read buffer
	even if latest file read failed.

	* src/fstream.cpp: Integrate trunk fix for management of Crtl-Z under
	Windows.

2008-01-11  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/num_put_float.cpp, stlport/stl/_cstdlib.h, stlport/stl/config/_hpux.h:
	On HPUX IA64 gcc have <wchar.h> and <cwchar> files, but they are conflict
	with <stl/_mbstate_t.h>; suggested by KBac, patch #1868233.

2008-01-02  Francois Dumont  <dums@users.sourceforge.net>
